8252359: HotSpot Not Identifying it is Running in a Container

Reviewed-by: sgehwolf